# stick-handler

./: .gitignore  CAMERA_API_PLAN.md  CAMERA_API_PLAN_REVIEW.md  CLAUDE.md  CRITICAL_OPERATING_CONSTRAINTS.md  Cargo.toml  PLAN.md  README_SERVER.md  Server-Game-Loop.md  ServerDevDependencies.md  ServerRuntimeDependencies.md  World-Calibration.md  __Workflow__.md  unity-client-plan.md
.claude/: settings.json
.claude/skills/pm/: SKILL.md
.pm/: .gitignore  config.toml  user.json
Unity/Projects/Stick Handle Trainer/: Assembly-CSharp-Editor.csproj  Assembly-CSharp-firstpass.csproj  Assembly-CSharp.csproj  Gltforge.Editor.csproj  Gltforge.Runtime.csproj  Stick Handle Trainer.sln  stick-handle-editor.csproj  stick-handle.csproj  unity-utilities-editor.csproj  unity-utilities.csproj
Unity/Projects/Stick Handle Trainer/.claude/: settings.local.json
Unity/Projects/Stick Handle Trainer/Assets/: __wip__.uss
Unity/Projects/Stick Handle Trainer/ProjectSettings/: EditorBuildSettings.asset  GraphicsSettings.asset  ProjectSettings.asset
Unity/stick-handle/: SceneSetup.md
Unity/stick-handle/Assets/Materials/: CylinderCalibration.mat
Unity/stick-handle/Assets/RenderTextures/: ControlPanel 1.mat  ControlPanelRT.renderTexture  VideoFeedRT.renderTexture  VideoPanel.mat
Unity/stick-handle/Assets/Resources/: OculusRuntimeSettings.asset  WorldCalibrationData.asset
Unity/stick-handle/Assets/Scenes/: main.unity  mr.unity  quest.unity
Unity/stick-handle/Assets/Scripts/: BlobIndicatorController.cs  CalibrationBackButton.cs  CalibrationMenuController.cs  CylinderLabelController.cs  FloorConstrainedGrabInteractable.cs  HsvFilterController.cs  SignalingClient.cs  StillImagePanelController.cs  UiElements.cs  (+5 more)
Unity/stick-handle/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset
Unity/stick-handle/UIElementsSchema/: UnityEditor.Experimental.GraphView.xsd
backend/server/: Cargo.toml
backend/server/src/: app_state.rs  calibration_handler.rs  camera.rs  camera_handle.rs  hsv_handler.rs  main.rs  mjpeg_pipeline.rs  still_handler.rs  tracking_handler.rs  webrtc_handler.rs
backend/server/src/error/: mod.rs
backend/server/static/: index.html
backend/web-rtc/signal/: Cargo.toml
backend/web-rtc/signal/src/: lib.rs  message.rs  session.rs
backend/web-rtc/signal/src/error/: mod.rs
docs/: xr-input-mappings.md
(+27 files in other folders)
