[package]
name = "server"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
axum  = { workspace = true }
futures-util = { workspace = true }
bytes = { workspace = true }
error-location = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
signal = { workspace = true }
signal-server = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
webrtc = { workspace = true }
webrtc-media = { workspace = true }
opencv = { workspace = true }

